syntax = "proto3";
package main;
option go_package = "../protobuf/protogen";

import "user.proto";

service Main {
    rpc GetUser (user.GetUserRequest) returns (user.UserResponse);
    rpc CreateUser (user.CreateUserRequest) returns (Empty);
}


message Empty {
}